--- a/Lab13/pom.xml
+++ b/Lab13/pom.xml
@@ -30,5 +30,10 @@
 	
 	<properties>
         <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 </project>
