--- a/Lab13/pom.xml
+++ b/Lab13/pom.xml
@@ -23,6 +23,13 @@
 			<version>${javax.servlet-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<dependency>
+    		<groupId>jstl</groupId>
+    		<artifactId>jstl</artifactId>
+    		<version>1.2</version>
+		</dependency>	
 	</dependencies>
 	<build>
 		<finalName>Lab13</finalName>
